--- a/popup.html
+++ b/popup.html
@@ -98,7 +98,7 @@
 <body>
   <div class="popup-container">
     <h2>Summarized Text</h2>
-    <div id="textDisplay">Generating Summary Please Wait...</div>
+    <div id="textDisplay">Select some text and click Summarize in the context menu. If this popped up after doing so then please wait for it to load. If this is your first use then it will take longer than usual as it downloads the LLM for the first time.</div>
     <button class="copy-button" id="copyButton">Copy to Clipboard</button>
   </div>
 
